# r-com-axum7.4

./: .env.docker.example  .gitignore  API_DOCUMENTATION.md  AXUM_MIGRATION_NOTES.md  Dockerfile.html-server  ENTHUSIAST_INTEGRATION.md  ENTHUSIAST_README.md  ENTHUSIAST_SETUP_STATUS.md  FRONTEND_FRAMEWORK_OPTIONS_2025.md  LEPTOS_FRONTEND_SUMMARY.md  R-COM_INTEGRATION_SUMMARY.md  README.md  SETUP_GUIDE.md  WEBHOOK_SETUP.md  admin-dashboard.html  api-test-simple.html  api-test.html  brevo-qr-test.html  brevo-test.html  docker-compose.example.yml  docker-compose.yml  monitor-all-builds.sh  monitor-leptos-build.sh  monitor-verbose.sh  monitor.sh  monitor2.sh  monitor3.sh  package-lock.json  package.json  shipping-test.html  sms-test.html  test_square_integration.sh
admin-portal/: package-lock.json  package.json
admin-portal/src/: App.tsx
admin-portal/src/components/: AdminProducts.tsx
backend/: .env.example  .sqlxrc  Cargo.toml  Dockerfile
backend/migrations/: 20230513161000_create_products_table.sql  20230514000000_create_admin_users_table.sql  20230515000000_create_webhooks_and_orders.sql
backend/src/: admin_auth.rs  admin_auth.rs.fixed  admin_products.rs  admin_products.rs.fixed  brevo_email.rs  easypost_shipping.rs  email.rs  letre_email.rs  lettre_email.rs  main.rs  square_payments.rs  textbelt_sms.rs
backend/src/webhooks/: mod.rs  square.rs  stripe.rs
compile_errors/: E0049.txt  E0061.txt  E0195.txt  E0432.txt  E0599.txt
frontend-leptos/: Cargo.toml  Dockerfile  Leptos.toml  index.html
frontend-leptos/src/: app.rs  lib.rs
frontend-leptos/src/api/: cart.rs  checkout.rs  mod.rs  products.rs
frontend-leptos/src/components/: footer.rs  header.rs  mod.rs  product_card.rs
frontend-leptos/src/pages/: cart.rs  catalog.rs  checkout.rs  home.rs  mod.rs  not_found.rs  product.rs
frontend-leptos/src/types/: cart.rs  mod.rs  order.rs  product.rs  user.rs
frontend-leptos/src/utils/: mod.rs
frontend-leptos/style/: main.css
frontend-react/: .env  .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend-react/src/: App.tsx
frontend-react/src/components/: Cart.tsx  CartDrawer.tsx  Checkout.tsx  CheckoutDialog.tsx  ProductGrid.tsx  ProductList.tsx
frontend-yew/: Cargo.toml  README.md  Trunk.toml  index.html
frontend-yew/src/: main.rs
