[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
dotenv = "0.15"
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
# Use direct Stripe crate - renamed for clarity
stripe = { package = "async-stripe", version = "0.21.0", features = ["runtime-tokio-hyper"] }
chrono = "0.4"
totp-rs = "5.5.1"
tracing = "0.1"
tracing-subscriber = "0.3"
base32 = "0.4"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
panic = 'abort'

