[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.36.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "=0.7.3", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
dotenv = "0.15.0"
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = "9.2.0"
# Use direct Stripe crate - renamed for clarity
stripe = { package = "async-stripe", version = "0.23.0", features = ["runtime-tokio-hyper"] }
# Square payments integration
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4.34"
totp-rs = "5.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
base32 = "0.4.0"
rand = "0.8.5"
async-trait = "0.1.77"
# Lettre for transactional emails
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
# HMAC for Square webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
panic = 'abort'

