[package]
name = "frontend-leptos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.6", features = ["http"] }  # For HTTP requests in WASM
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Storage",
] }
wasm-bindgen-futures = "0.4"
codee = { version = "0.2", features = ["json_serde"] }  # For localStorage serialization
urlencoding = "2.1"
chrono = "0.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
